--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,37 @@
+
+body {
+  font: 300 18px/1.6em "Roboto", sans-serif;
+  letter-spacing: 0.5px;}
+
 h1 {
     text-align: center;
 }
 
-div{
-  width:60%;
-  color: #888;
-  margin-top: 30px;
+h2 {
+    padding: 0;
+    margin: 0;
+    font: 400 24px/1.4em "Montserrat", sans-serif;
+    letter-spacing: 1px;
+    margin-bottom: 0;
+    text-transform: none;
+    text-align: center;
+    color: #053488;
+    box-sizing: border-box;
+    display: block;}
 
-}
+h3 {
+  margin: 0;
+  font: 100 16px/2em "Montserrat", sans-serif;
+  text-align: center;
+  color: #ffffff;
+  margin-bottom: 0;}
+
+h4 {
+  font: 500 16px/1.1em "Montserrat", sans-serif;
+  text-align: left;
+  color: #505C69;
+  margin-bottom: 5px;}
+
 
 @font-face {
   font-family: 'Material Icons';
@@ -53,5 +77,40 @@ div{
   stroke: steelblue;
   stroke-width: 1.5px;
 }
-
 /* CSS for trend charts  above */
+
+.button-group {
+  display: inline-block;
+  vertical-align: middle; }
+  .button-group .horizontalButtons {
+    margin: 0;
+    position: relative;
+    float: left;
+    overflow: visible;
+    color: #505C69;
+    background-color: #F0F2F6;
+    border: 1px solid #fff;
+    padding: 3px 9px;
+    font-size: 12px;
+    font-weight: 400; }
+    .button-group .horizontalButtons:hover {
+      background-color: #E5E8EE; }
+    .button-group .horizontalButtons:focus {
+      outline: none; }
+    .button-group .horizontalButtons.active {
+      outline: none;
+      background-color: #fff;
+      border: 1px solid #E5E8EE; }
+
+.container-fluid {
+    /*max-width: 960px;*/
+    margin-bottom: 5px; 
+    padding-top: 5px; 
+    margin-left: 10px;}
+
+.pure-form {
+  margin-left: 10px;
+  text-align: center;}
+
+
+
